# djytube

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: AUTHORS
.github/workflows/: ci.yml
installer/: djytube.py
tests/: conftest.py  test_djytube.py
